MultiClusterGateway_GKE_Fleet/projects/qwiklabs-gcp-01-2e74891f7230/ComputeFirewall/gke-cluster3-ea679bf4-exkubelet.tf
resource "google_compute_firewall" "gke_cluster3_ea679bf4_exkubelet" {
  deny {
    ports    = ["10255"]
    protocol = "tcp"
  }

  direction     = "INGRESS"
  name          = "gke-cluster3-ea679bf4-exkubelet"
  network       = "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-2e74891f7230/global/networks/default"
  priority      = 1000
  project       = "qwiklabs-gcp-01-2e74891f7230"
  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["gke-cluster3-ea679bf4-node"]
}
# terraform import google_compute_firewall.gke_cluster3_ea679bf4_exkubelet projects/qwiklabs-gcp-01-2e74891f7230/global/firewalls/gke-cluster3-ea679bf4-exkubelet
